# Pardus-LAN-Share

./: CMakeLists.txt  README.md  device_discovery.cpp  device_discovery.h  main.cpp  pardus_server.cpp  pardus_server.h
